# ddpm-zero-shot-interpolation

./: README.md  pyproject.toml  requirements.txt  requirements_macos.txt  setup.sh
diff_exp/: sam.py  spectral_norm.py  transforms_utils.py  utils.py
diff_exp/data/: attribute_celeba.py  attribute_celeba_dataset.py  binarized_uniform_circles.py  blond_black_hair_filter_with_ensemble.py  borders_circles.py  celeba.py  celeba_10_valid.py  circles_squares_uniform.py  debug_celeba.py  from_npz_dataset.py  from_npz_with_labels.py  from_npz_with_labels_multi.py  load_from_npz.py  make_blond_black_hair_extreme_slices.py  make_filtered_agree_dataset.py  make_filtered_dataset.py  make_filtered_multi_agree_dataset.py  make_young_old_extreme_slices.py  npz_dataset.py  quadrant_circle.py  smile_hair_2d_dataset.py  young_old_filter_with_ensemble.py
diff_exp/data/2d_smile_hair/: train.txt
diff_exp/data/blond_black_hair_extreme_ensemble/: train.txt
diff_exp/data/celeba_smile_train_size_ablation/: 10k.txt  30k.txt  5k.txt  60k.txt
diff_exp/data/young_old_extreme/: train.txt
diff_exp/models/: efficientnet.py  effnet_tanh.py  oai_unet_encoder.py  timm_embedding.py  trained_classifier.py
diff_exp/notebooks/: age_detection.ipynb  black_blond_hair.ipynb  green_lips.ipynb
diff_exp/notebooks/memorization_checks/: smile_10k.ipynb  (+3 more)
diff_exp/optim/: adam.py  sgd.py  utils.py
diff_exp/scripts/: calibrate_with_dataset.py  celeba_to_npz.py  celeba_to_npz_filter.py  compute_embeddings.py  equalize.py  faiss_find_closest.py  join_npz.py  train_cls_with_dataset_fabric.py
(+206 files in other folders)
