[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "diff_exp"
authors = [
]
description = "Code for diff_exp master thesis."
readme = "README.md"
requires-python = ">=3.8"
keywords = ["one", "two"]
license = {text = "EUPL"}
classifiers = [
    #"Framework :: Django",
    "Programming Language :: Python :: 3",
]
dependencies = [
    #"requests",
    #'importlib-metadata; python_version<"3.8"',
# we do all dependencies in requirements.txt/mamba
]
dynamic = ["version"]
[tool.setuptools.packages.find]
where = ["."]
exclude = ["tests"]
include = ["diff_exp*"]

#[project.optional-dependencies]
#pdf = ["ReportLab>=1.2", "RXP"]
#rest = ["docutils>=0.3", "pack ==1.1, ==1.3"]

[project.scripts]
stylus_sp1 = "diff_exp.scripts.sp1:run"
stylus_sp2 = "diff_exp.scripts.sp2:run"

